Green to Orange colour change
This commit will change the colour of the site from green to orange

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.2/css/foundation.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/styles.css">
-	<link rel="shortcut icon" href="./img/favicon-logo.jpg"/>
+	<link rel="shortcut icon" href="./img/favicon-logo-orange.jpg"/>
 	
 </head>
 <body>
@@ -18,7 +18,7 @@
 				<div class="contain-to-grid sticky" >
 			   		<nav class="top-bar" data-topbar>
 			     		<ul class="title-area name" >
-			     		<li><img src="./img/personal-logo.svg" alt="" class="logo "></li>
+			     		<li><img src="./img/personal-logo-orange.svg" alt="" class="logo "></li>
 			                <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
 			      		</ul>
 			
@@ -42,7 +42,7 @@
 			<main>
 					<div class="row intro">
 						<div class="columns text-center">
-							<img src="./img/body-logo.svg" alt="" class="body-logo ">
+							<img src="./img/body-logo-orange.svg" alt="" class="body-logo ">
 						</div>
 						<div class="columns text-center">
 							<h1 id="for-sharper-designs">FOR SHARPER DESIGNS</h1>
