--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
 							</div>
 							<div class="row" id="sites">		
 								<div class="medium-3 columns text-center sites" >
-									<a href="http://sam.sharpe.yoobee.net.nz/_Assignments/WE02/public_html/index.html"><img src="./img/websites/savoy-logo.png" alt="" id="savoy-logo"></a>	
+									<a href="https://github.com/Gingafortress/Gingafortress.github.io.git"><img src="./img/websites/savoy-logo.png" alt="" id="savoy-logo"></a>	
 								</div>
 
 								<div class="medium-3 columns text-center sites">
-									<a href="http://sam.sharpe.yoobee.net.nz/_Assignments/WE04/public_html/index.html"><img src="./img/websites/milk-logo/milk-logo.svg" alt="" id="milk-logo"></a>	
+									<a href="https://gingafortress.github.io/Assignment-3-Wellington-choc-milk/"><img src="./img/websites/milk-logo/milk-logo.svg" alt="" id="milk-logo"></a>	
 								</div>
 								
 								<div class="medium-3 columns text-center sites" >
