--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 							</div>
 							<div class="row" id="sites">		
 								<div class="medium-3 columns text-center sites" >
-									<a href="https://github.com/Gingafortress/Gingafortress.github.io.git"><img src="./img/websites/savoy-logo.png" alt="" id="savoy-logo"></a>	
+									<a href="https://gingafortress.github.io/Assignment-2-Savoy-Hotel/"><img src="./img/websites/savoy-logo.png" alt="" id="savoy-logo"></a>	
 								</div>
 
 								<div class="medium-3 columns text-center sites">
